# tgdb

./: .gitignore  README.md  pyproject.toml
.github/workflows/: cd.yml  ci.yml
deploy/dev/: docker-compose.yaml
deploy/dev/tgdb/: conf.yaml
deployments/dev/: docker-compose.yaml
deployments/dev/backend/: tg_secrets.toml
deployments/dev/lib_snake_case/: Dockerfile
src/lib_snake_case/: __init__.py  x.py
src/tgdb/: __init__.py  async_queque.py  lazy_map.py
src/tgdb/application/: commit_transaction.py  create_relation.py  dynamically_replicate_log_to_heap.py  input_operator.py  input_operators.py  output_commits.py  output_commits_to_clients.py  output_commits_to_heap.py  output_commits_to_log.py  output_commits_to_tuples.py  rollback_transaction.py  serialize_transactions.py  start_down.py  start_transaction.py  start_up.py  statically_replicate_log_to_log.py  view_all_relation.py  view_relation.py  view_tuples.py
src/tgdb/application/errors/: common.py
src/tgdb/application/horizon/: commit_transaction.py  output_commits.py  output_commits_to_tuples.py  rollback_transaction.py  start_transaction.py
src/tgdb/application/ports/: async_queque.py  channel.py  clock.py  effect_encoding.py  (+16 more)
src/tgdb/entities/: __init__.py  assert_.py  entity.py  logic_time.py  mark.py  message.py  number.py  operator.py  row.py  transaction.py  transaction_horizon.py  transaction_mark.py
src/tgdb/fastapi/: transaction_channel.py
src/tgdb/infrastructure/: async_map.py  async_queque.py  concurrent_queque.py  heap_query.py  heap_row_encoding.py  heap_tuple_encoding.py  lazy_map.py  logic_clock.py  map_queuqe.py  operator_encoding.py  primitive_encoding.py  row_encoding.py  telegram_secrets.py
src/tgdb/presentation/: async_map.py  async_result.py
src/tgdb/telethon/: client_pool.py  lazy_message_map.py  primitive.py  replicated_log.py  row.py  transaction.py
tests/test_lib_snake_case/: test_x.py
tests/test_tgdb/: conftest.py  test_x.py
tests/test_tgdb/test_entities/: test_logic_time.py  test_transaction_horizon.py
tests/test_tgdb/test_infrastructure/: test_async_map.py  test_async_queque.py  test_heap_tuple_encoding.py  test_lazy_map.py  test_operator_encoding.py
(+132 files in other folders)
